# sample-amazon-bedrock-agentcore-onboarding

./: .gitignore  CLAUDE.md  README.md  README_ja.md  main.py  pyproject.toml
.claude/skills/clean-workshop/: SKILL.md
.claude/skills/run-workshop/: SKILL.md
.claude/skills/scaffold-workshop/: SKILL.md
.claude/tools/: scaffold_workshop.py
.kiro/agents/: default-agent.json
.workshop/: workshop-dryrun-2nd.md
01_code_interpreter/: test_cost_estimator_agent.py
01_code_interpreter/cost_estimator_agent/: config.py  cost_estimator_agent.py
02_runtime/: README.md  README_ja.md  clean_resources.py  prepare_agent.py
02_runtime/deployment/: invoke.py  invoke_async.py
03_identity/: clean_resources.py  setup_inbound_authorizer.py  test_identity_agent.py
03_memory/: README.md  README_ja.md  test_memory.py
04_gateway/: clean_resources.py  setup_outbound_gateway.py  test_gateway.py
04_gateway/src/: app.py
04_observability/: README.md
05_evaluation/: README.md  README_ja.md  clean_resources.py  test_evaluation.py
05_evaluation/evaluators/: __init__.py  tool_call_evaluator.py
05_observability/: README.md  test_observability.py
06_identity/: README.md  README_ja.md  clean_resources.py  setup_inbound_authorizer.py
06_memory/: clean_resources.py  test_memory.py
07_gateway/: README_ja.md  clean_resources.py  setup_outbound_gateway.py  test_gateway.py
08_policy/: .gitignore  README.md  README_ja.md  clean_resources.py  setup_policy.py  test_policy.py
09_browser_use/: README.md  README_ja.md  clean_resources.py  test_browser_use.py
(+3 files in other folders)
